--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,11 +12,14 @@
 
 
     <EditText
-        android:id="@+id/eitName"
+        android:id="@+id/editName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        tools:ignore="MissingConstraints" />
+        tools:ignore="MissingConstraints"
+        android:layout_marginBottom="30dp"
+        android:layout_marginTop="30dp"
+        android:autofillHints="" />
 
     <Button
         android:layout_width="wrap_content"
@@ -29,7 +32,7 @@
     <TextView
         android:layout_height="wrap_content"
         android:layout_width="wrap_content"
-        android:text="@string/User List"
+        android:text="@string/Users"
         android:layout_marginTop="20dp"
         android:layout_marginBottom="20dp"
         android:textAppearance="?android:attr/textAppearanceLarge"
